# docs/swagger.yaml
@@ -9,16 +9,42 @@ paths:
   /orders:
     get:
       summary: Get a list of all parsed order summaries
-      description: Retrieve a list of all parsed order summaries.
+      description: Retrieve a paginated list of all parsed order summaries.
+      parameters:
+        - name: page
+          in: query
+          description: Page number (default is 1)
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: Number of orders per page (default is 10)
+          required: false
+          schema:
+            type: integer
+            default: 10
       responses:
         '200':
-          description: A list of order summaries
+          description: A paginated list of order summaries
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
+                type: object
+                properties:
+                  page:
+                    type: integer
+                  limit:
+                    type: integer
+                  total:
+                    type: integer
+                  totalPages:
+                    type: integer
+                  orders:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Order'
   /orders/{order_id}:
     get:
       summary: Get detailed information of a specific order
