# src/controllers/orderController.js
@@ -2,7 +2,19 @@ import { getOrdersFromDB, getOrderByIdFromDB, syncNewOrders } from '../services/
 
 export const getAllOrders = async (req, res) => {
   const data = await getOrdersFromDB();
-  res.json(data);
+  const page = parseInt(req.query.page) || 1;
+  const limit = parseInt(req.query.limit) || 10;
+  const start = (page - 1) * limit;
+  const end = start + limit;
+  const paginated = data.slice(start, end);
+
+  res.json({
+    page,
+    limit,
+    total: data.length,
+    totalPages: Math.ceil(data.length / limit),
+    orders: paginated,
+  });
 };
 
 export const getOrderById = async (req, res) => {
